tests/diagnostics/packages/imports/unknown_package/expect.txt
# exit: 1
input/main.coppice:1:1: error: unknown package 'workspace/missing/pkg'
  import workspace/missing/pkg { Token }
  ^
